# SimilarStrings

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SimilarStrings.sln  SimilarStrings.vcxproj  build.py  cmake_install.cmake  cmds.txt  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker.bat  docker_exec.ps1  file_list.cmake  sizeOfWordsDistribution.txt
.github/workflows/: cmake-multi-platform.yml  docker-image.yml  docker.yml
Dependencies/: CMakeLists.txt
SimilarStrings/: SimilarStrings.sln  SimilarStrings.vcxproj
Test/: CMakeLists.txt  main.cpp
src/: CommandsHandler.cpp  CommandsHandler.h  JSONRequestHandler.cpp  JSONRequestHandler.h  MyWebServiceApp.cpp  MyWebServiceApp.h  PermutationTrie.cpp  PermutationTrie.h  main.cpp
